--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-.*
-*~
-!.gitignore
-!.perltidyrc
-!.travis.yml
-blib
-pm_to_blib
-Makefile*
-!Makefile.PL
-MANIFEST*
-!MANIFEST.SKIP
-*META.*
+~$
+*.bak
+*.old
+*.swp
+/blib/
+/cover_db
+/inc/
+/local
+/Makefile
+/Makefile.old
+/MANIFEST$
+/MANIFEST.bak
+/META*
+/MYMETA*
+/pm_to_blib
