--- a/.perltidyrc
+++ b/.perltidyrc
@@ -10,3 +10,5 @@
 -bt=2    # High brace tightness
 -sbt=2   # High square bracket tightness
 -isbc    # Don't indent comments without leading space
+-wn      # Weld nested containers
+-nst     # Don't output to STDOUT
